main/default/objects/Voicemail_Menu_Option__c/Voicemail_Menu_Option__c.object-meta.xml
<CustomObject>
    <label>Voicemail Option</label>
    <nameField>
        <displayFormat>VMO-{00000}</displayFormat>
        <label>Voicemail Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voicemail Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>