main/default/objects/Voicemail_Menu_Option__c/fields/Action_for_No_Answer__c.field-meta.xml
<CustomField>
    <fullName>Action_for_No_Answer__c</fullName>
    <label>Action for &quot;No Answer&quot;</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voice Mail Release Call</fullName>
            </value>
            <value>
                <fullName>Voice Mail Dial MB or Menu</fullName>
            </value>
            <value>
                <fullName>Repeat Greeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>