main/default/objects/Voicemail_Menu_Option__c/fields/No_of_Rings_for_No_Answer__c.field-meta.xml
<CustomField>
    <fullName>No_of_Rings_for_No_Answer__c</fullName>
    <label>No. of Rings for &quot;No Answer&quot;</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short (3 rings)</fullName>
            </value>
            <value>
                <fullName>Medium (6 rings)</fullName>
            </value>
            <value>
                <fullName>Long (10 rings)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>