main/default/objects/Voicemail_Menu_Option__c/fields/Technical_Information__c.field-meta.xml
<CustomField>
    <fullName>Technical_Information__c</fullName>
    <label>Technical Information</label>
    <referenceTo>Technical_Information__c</referenceTo>
    <relationshipName>Voicemail_Menu_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>